[package]
name = "wgpu-experiments"
version = "0.1.0"
authors = ["Lesley Lai <lesley@lesleylai.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.7"
shaderc = "0.6.3"
wgpu = "0.6.0"
winit = "0.23.0"
