[package]
name = "wgpu-experiments"
version = "0.1.0"
authors = ["Lesley Lai <lesley@lesleylai.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.4.1"
futures = "0.3.7"
image = "0.23.11"
wgpu = "0.6.0"
winit = "0.23.0"

[build-dependencies]
shaderc = "0.6.3"
glob = "0.3.0"
anyhow = "1.0.34"
