[package]
name = "wgpu-experiments"
version = "0.1.0"
authors = ["Lesley Lai <lesley@lesleylai.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
bytemuck = "1.4.1"
cgmath = "0.17.0"
futures = "0.3.7"
image = "0.23.11"
tobj = "2.0.2"
wgpu = "0.6.0"
winit = "0.23.0"

[build-dependencies]
shaderc = "0.6.3"
glob = "0.3.0"
fs_extra = "1.2.0"
anyhow = "1.0.34"
